Fetch forks from DB if available or cache is old

--- a/app/views/repos/_list.html.erb
+++ b/app/views/repos/_list.html.erb
@@ -5,7 +5,7 @@
 <% else %>
   <ul class="<%= user.login %>">
   <% repos.each do |repo| %>
-    <li><%= repo.name  %></li>
+    <li><%= repo.repo_name  %></li>
   <% end %>
   </ul>
 <% end %>
