--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -3,7 +3,7 @@
     <h1>Forkbomb</h1>
     <p>Ease the pain of maintaining long-running GitHub forks.</p>
     <p>
-      <%= link_to "Get Started", user_omniauth_authorize_path(:github), class: "btn btn-primary btn-lg", role: "button" %>
+      <%= link_to "<i class='fa fa-github fa-lg'></i> Sign in with Github".html_safe, user_omniauth_authorize_path(:github), class: "btn btn-primary btn-lg", role: "button" %>
     </p>
   </div>
 </div>
