--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    <h1>Forkbomb</h1>
+    <img src="assets/logo_375.png" alt="forkbomb" />
     <p>Ease the pain of maintaining long-running GitHub forks.</p>
     <p>
       <%= link_to "<i class='fa fa-github fa-lg'></i> Sign in with Github".html_safe, user_omniauth_authorize_path(:github), class: "btn btn-primary btn-lg", role: "button" %>
