--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,8 @@
     <%= yield %>
 
     <footer>
-      <p>An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment.</p>
+      <p>An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment.
+      Design by <%= link_to 'Kimberly C. Abbott', 'http://www.kimberlycabbott.com/' %></p>
     </footer>
   </div>
 
