title for fork page

--- a/app/views/forks/show.html.erb
+++ b/app/views/forks/show.html.erb
@@ -1,1 +1,1 @@
-<%= @fork.inspect %>
+<h1><%= @fork.user %> / <%= @fork.repo_name %> <%= link_to "<i class='fa fa-github fa-lg'></i>".html_safe, @fork.github_path %></h1>
