--- a/app/views/forks/show.html.erb
+++ b/app/views/forks/show.html.erb
@@ -1,1 +1,3 @@
 <h1><%= @fork.user %> / <%= @fork.repo_name %> <%= link_to "<i class='fa fa-github fa-lg'></i>".html_safe, @fork.github_path %></h1>
+
+<%= image_tag fork_badge_path(@fork, format: 'png')%>
