Update forks asynchronously

--- a/app/views/fork/index.html.erb
+++ b/app/views/fork/index.html.erb
@@ -8,6 +8,18 @@
   $(document).ready(function() {
     $('.status').on('switch-change', function (e, data) {
        $(this).parent('form').submit();
+       select = $('select[data-repo="' + $(this).attr("data-repo") + '"]')
+       
+       if (data.value === true) {
+        select.removeAttr('disabled');
+       } else {
+        select.attr('disabled', 'disabled');
+        select.val('')
+       }
     });
+    
+    $('.update-frequency').change(function() {
+      $(this).parent('form').submit();
+    })
   })
 </script>
