Set default update frequency

--- a/app/views/forks/index.html.erb
+++ b/app/views/forks/index.html.erb
@@ -12,6 +12,7 @@
        
        if (data.value === true) {
         select.removeAttr('disabled');
+        select.find('option[value=""]').remove();
        } else {
         select.attr('disabled', 'disabled');
         select.val('')
