--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,9 +45,9 @@
 
   <%= yield %>
 
-  <footer>
-    <p>An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment.
-      Design by <%= link_to 'Kimberly C. Abbott', 'http://www.kimberlycabbott.com/' %>.
+  <footer class="text-center">
+    <p>An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment |
+      Design by <%= link_to 'Kimberly C. Abbott', 'http://www.kimberlycabbott.com/' %> |
     Fork Forkbomb on <%= link_to 'Github', 'https://github.com/theodi/forkbomb' %></p>
   </footer>
 </div>
