--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,3 +29,21 @@ select.update-frequency {
 select.update-frequency[disabled] {
 	color: #999;
 }
+
+.badge-code {
+  table {
+    width: 100%;
+    td:first-child {
+      vertical-align: top;
+      padding-right: 10px;
+    }
+    td:nth-child(2) {
+      font-size: 90%;
+      width: 100%;
+      padding-bottom: 10px;
+    }
+    textarea {
+      width: 100%;      
+    }
+  }
+}
