Add logo to navbar
Resolves #64

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Forkbomb</a>
+      <a href="/"><%= image_tag 'logo_inverted.svg', id: 'logo-navbar', alt: 'forkbomb' %></a>
     </div>
     <div class="navbar-collapse collapse">
       <% if current_user %>
