Remove navbar on homepage
Resolves part of #64, but could be DRYer with a nested layout. However, brainfail.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  */
 
 /* avoid top navbar */ 
-body { padding-top: 70px; }
+body.with-navbar { padding-top: 70px; }
 
 select.update-frequency {
 	height: 22px;
