--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -11,29 +11,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
 </head>
-<body class='with-navbar'>
-
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/"><%= image_tag 'logo_inverted.svg', id: 'logo-navbar', alt: 'forkbomb' %></a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <% if current_user %>
-          <%= link_to "Sign out", sign_out_path, class: "btn btn-default navbar-btn navbar-right", role: "button" %>
-      <% else %>
-          <%= link_to "Sign in", user_omniauth_authorize_path(:github), class: "btn btn-default navbar-btn navbar-right", role: "button" %>
-      <% end %>
-    </div>
-    <!--/.navbar-collapse -->
-  </div>
-</div>
+<body>
 
 <% if flash[:notice] %>
     <div class="container">
