Make table non-ugly
Resolves #62

--- a/app/views/forks/_list.html.erb
+++ b/app/views/forks/_list.html.erb
@@ -3,7 +3,7 @@
 <% if repos.count == 0%>
   <p>No forks here!</p>
 <% else %>
-  <table class="<%= user.login %> table table-condensed">
+  <table class="<%= user.login %> fork-list table table-striped">
     <tr>
       <th scope="col">Repo</th>
       <th scope="col">Status</th>
