--- a/app/views/forks/show.html.erb
+++ b/app/views/forks/show.html.erb
@@ -16,6 +16,8 @@
     <p>
       <%= link_to "<i class='fa fa-refresh'></i> Update Status".html_safe, 
                    fork_refresh_path(@fork), method: :post, class: 'btn btn-primary' %>
+      <%= link_to "<i class='fa fa-code-fork'></i> Generate Pull Request".html_safe, 
+                   fork_generate_path(@fork),  method: :post, class: 'btn btn-primary' if !@fork.current? %>
     </p>
   <% end %>
   
