--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -26,9 +26,10 @@
 
   <hr />
   <footer class="text-center">
-    <p>An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment |
-      Design by <%= link_to 'Kimberly C. Abbott', 'http://www.kimberlycabbott.com/' %> |
-    Fork Forkbomb on <%= link_to 'Github', 'https://github.com/theodi/forkbomb' %></p>
+    An <%= link_to 'Open Data Institute', 'http://theodi.org' %> Experiment |
+    Design by <%= link_to 'Kimberly C. Abbott', 'http://www.kimberlycabbott.com/' %> |
+    Fork Forkbomb on <%= link_to 'Github', 'https://github.com/theodi/forkbomb' %> |
+    Follow Forkbomb on <%= link_to 'Twitter', 'https://twitter.com/forkbombio' %>
   </footer>
 </div>
 
